# yet-another-todo-list

./: .env  .space.kts  Cargo.toml
.github/workflows/: tests.yml
configuration/: base.yaml
migrations/: 20220827202907_new-user.sql  20220902102150_Add_List_table.sql  20220902131510_create-task-table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/domain/: list_name.rs  mod.rs  new_user.rs  task.rs  todo_list.rs  user_name.rs  user_password.rs
src/routes/: mod.rs  new_user.rs  todo_lists.rs
tests/api/: health_check.rs  helpers.rs  main.rs  todo.rs  todo_creation.rs  todo_making.rs  user_add.rs
