[package]
name = "yet-another-todo-list"
version = "0.1.0"
edition = "2021"
authors = ["Sergey Kharitontsev-Beglov <khbminus@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "yatd"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
config = { version = "0.13", features = ["yaml"] }
secrecy = { version = "0.8", features = ["serde"] }
uuid = {version = "1.1", features = ["v4", "serde"]}
chrono = "0.4"
unicode-segmentation = "1"
serde_json = "1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
